--- a/css/desktop.css
+++ b/css/desktop.css
@@ -100,7 +100,7 @@
   background-color: #3c1053;
   z-index: 1;
   top: 50px;
-  padding: 0 20px;
+  padding: 0 50px;
 }
 
 .navbar a {
@@ -126,7 +126,7 @@
 #about {
   margin-top: 100vh;
   width: 800px;
-  padding: 60px 0;
+  padding: 50px 0;
 }
 
 #vision {
@@ -135,11 +135,6 @@
 
 #mission {
   width: 800px;
-  padding-top: 60px;
-}
-
-.nav-desktop li:hover {
-  background-color: #df678c;
 }
 
 .partners {
@@ -165,10 +160,26 @@
   display: none;
 }
 
-.vision-container {
-  padding: 60px 0;
-}
-
 #partners-container {
   padding-top: 60px;
+}
+
+#vision {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+#founders-message #message {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: 200px auto;
+  width: 800px;
+}
+
+#founders-message-title {
+  margin-top: 160px;
+}
+
+#founders-message #message p {
+  margin-left: 50px;
 }
