--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,7 @@ p {
   color: #fff;
   z-index: 1;
   top: 0;
-  padding: 0 20px;
+  padding: 0 50px;
 }
 
 .navbar-top a {
@@ -140,14 +140,14 @@ img.floating-image {
 
 .footer {
   background-color: #fff;
-  padding: 40px 20px;
+  padding: 50px;
   color: #aaa;
   line-height: 18px;
 }
 
 .footer-bottom {
   background-color: #f5f5f5;
-  padding: 20px;
+  padding: 25px 50px;
 }
 
 .footer-heading {
@@ -761,18 +761,11 @@ input, textarea {
   font-size: 14px;
 }
 
-#message {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-columns: 200px auto;
-}
-
 #message p {
   background-color: #f5f5f5;
   padding: 40px;
   border-radius: 20px;
   border-top-left-radius: 0;
-  margin-left: 40px;
 }
 
 .vision-container {
@@ -781,5 +774,10 @@ input, textarea {
 
 #partners-container h1 {
   text-align: center;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
+}
+
+#mission {
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
