--- a/css/main.css
+++ b/css/main.css
@@ -781,3 +781,8 @@ input, textarea {
   padding-top: 50px;
   padding-bottom: 50px;
 }
+
+#contact {
+  background-color: #f5f5f5;
+  padding: 50px;
+}
