--- a/css/mobile.css
+++ b/css/mobile.css
@@ -122,6 +122,7 @@ h2 {
 
 .navbar-top {
   position: static;
+  padding: 0 25px;
 }
 
 .hero-heading {
@@ -167,9 +168,16 @@ h2 {
 }
 
 #about {
-  padding: 50px;
+  padding: 50px 25px;
 }
 
+#vision {
+  padding: 50px 25px;
+}
+
+#mission {
+  padding: 50px 25px;
+}
 
 #partners-container {
   padding-top: 30px;
@@ -201,4 +209,12 @@ h2 {
 
 .footer-bottom .footer-container {
   margin-top: 0px;
+}
+
+#navbar-top-email {
+  display: none;
+}
+
+#contact {
+  padding: 50px 25px;
 }
