--- a/css/mobile.css
+++ b/css/mobile.css
@@ -153,7 +153,7 @@ h2 {
 }
 
 .footer-container img {
-  width: 60%;
+  width: 70%;
   margin: 0 auto;
   margin-top: 50px;
   max-width: 300px;
@@ -190,10 +190,6 @@ h2 {
   margin-bottom: 50px;
 }
 
-#message {
-  text-align: center;
-}
-
 #message p {
   margin-left: 50px;
   margin-right: 50px;
@@ -217,4 +213,8 @@ h2 {
 
 #contact {
   padding: 50px 25px;
+}
+
+.contact-form {
+  padding: 25px;
 }
