--- a/css/main.css
+++ b/css/main.css
@@ -757,11 +757,15 @@ input, textarea {
   font-size: 14px;
 }
 
-#message p {
+#message>div {
   background-color: #f5f5f5;
   padding: 40px;
+  padding-top: 30px;
   border-radius: 20px;
   border-top-left-radius: 0;
+  color: #888;
+  font-size: 16px;
+  line-height: 1.8;
 }
 
 .vision-container {
@@ -781,4 +785,14 @@ input, textarea {
 #contact {
   background-color: #f5f5f5;
   padding: 50px;
+}
+
+.message-arrow {
+  position: absolute;
+  top: 0;
+  left: -25px;
+  width: 0; 
+  height: 0; 
+  border-left: 25px solid transparent;
+  border-top: 40px solid #f5f5f5;
 }
