--- a/css/desktop.css
+++ b/css/desktop.css
@@ -183,3 +183,12 @@
 #founders-message #message>div {
   margin-left: 50px;
 }
+
+.section {
+  width: 800px;
+  padding: 50px 0;
+}
+
+.section p {
+  margin-bottom: 20px;
+}
