--- a/css/main.css
+++ b/css/main.css
@@ -796,3 +796,37 @@ input, textarea {
   border-left: 25px solid transparent;
   border-top: 40px solid #f5f5f5;
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+  border-radius: 10px;
+}
+
+tr {
+  line-height: 50px;
+}
+
+th {
+  background-color: #3c1053;
+  color: #fff;
+  font-weight: bold;
+}
+
+td, th {
+  border: none;
+  text-align: left;
+  padding: 10px 25px;
+}
+
+td {
+  color: #666;
+}
+
+tr:nth-child(odd) {
+  background-color: #f5f5f5;
+}
+
+table a {
+  font-weight: bold;
+}
