--- a/css/mobile.css
+++ b/css/mobile.css
@@ -237,11 +237,15 @@ h2 {
   display: block;
   text-decoration: none;
   font-weight: bold;
-  padding: 15px 25px;
+  padding: 10px 25px;
   color: #fff;
   font-size: 14px;
 }
 
 .section {
   padding: 50px 25px;
+}
+
+.nav-item {
+  cursor: pointer;
 }
