--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,7 @@ a {
   letter-spacing: 1.5px;
   margin-left: 40px;
   white-space: nowrap;
+  padding: 10px 0;
 }
 
 @media (min-width: 992px) {
