--- a/css/desktop.css
+++ b/css/desktop.css
@@ -77,9 +77,14 @@
   transform: skewX(20deg);
 }
 
+.hero {
+  background-position: 70% 0%;
+  background-position: 0px 170px;
+}
+
 .hero-heading {
+  margin-left: 100px;
   margin-top: 100px;
-  grid-column:  8 / 13;
   display: flex;
   align-items: center;
   text-align: left;
