--- a/css/main.css
+++ b/css/main.css
@@ -579,6 +579,10 @@ h3 {
   font-weight: bold;
 }
 
+h4 {
+  color: #3c1053;
+}
+
 .secondary-bg h1, .secondary-bg h2 {
   color: #3c1053;
 }
@@ -838,4 +842,13 @@ table a {
 
 .founders-message-text p {
   margin-bottom: 25px;
+}
+
+p a {
+  font-weight: bold;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 26px;
 }
