--- a/css/desktop.css
+++ b/css/desktop.css
@@ -108,12 +108,16 @@
   line-height: 120px;
   color: #fff;
   font-weight: bold;
-  padding: 0 15px;
+  padding: 0 25px;
   white-space: nowrap;
 }
 
 #logo img {
   margin-top: 30px;
+}
+
+.nav-desktop {
+  margin-right: -25px;
 }
 
 .nav-mobile {
@@ -145,7 +149,7 @@
 
 .footer-container {
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .footer-container img {
