--- a/css/main.css
+++ b/css/main.css
@@ -875,3 +875,38 @@ a.btn {
 a.btn:hover {
   background-color: #df678c;
 }
+
+.team-member-card {
+  background: #ddd;
+  width: 100%;
+  margin-bottom: 50px;
+  background-color: #2e3e4a;
+  box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.2), 0 15px 35px 0 rgba(0, 0, 0, 0.2), 0 50px 100px 0 rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+.team-member-name {
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.team-member-card>img {
+  width: 100%;
+}
+
+.team-member-text {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 200px;
+  padding:0 10px;
+}
+
+.team-member-title {
+  font-size: 16px;
+}
+
+.team-container {
+  display: grid;
+}
