--- a/css/main.css
+++ b/css/main.css
@@ -910,3 +910,20 @@ a.btn:hover {
 .team-container {
   display: grid;
 }
+
+#about {
+  text-align: center;
+}
+
+#about .video-wrapper {
+  position: relative;
+  padding-top: 56.25%;
+}
+
+#about iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
