--- a/css/main.css
+++ b/css/main.css
@@ -14,9 +14,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 p {
-  color: #777;
+  color: #666;
   font-size: 16px;
-  line-height: 1.8;
+  line-height: 30px;
   margin: 0;
 }
 
@@ -141,14 +141,14 @@ img.floating-image {
 }
 
 .footer {
-  background-color: #fff;
+  background-color: #3c1053;
   padding: 50px;
-  color: #aaa;
+  color: #fff;
   line-height: 18px;
 }
 
 .footer-bottom {
-  background-color: #f5f5f5;
+  background-color: #2b0b3d;
   padding: 25px 50px;
 }
 
@@ -158,7 +158,7 @@ img.floating-image {
 }
 
 .footer a {
-  color: #aaa;
+  color: #fff;
 }
 
 .footer-nav a {
